--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ff393939</color>
+    <color name="colorPrimaryDark">#1e1e1e</color>
+    <color name="colorAccent">#DCC213</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#ff303030</color>
+    <color name="dark_grey">#ff212121</color>
+    <color name="blue">#387eed</color>
+    <color name="light_grey">#cacdd1</color>
+    <color name="ripple_color_light">#1f000000</color>
+    <color name="black">#212121</color>
+    <color name="red">#E82C0C</color>
 </resources>
